plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.147'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

// The jar carries the Minecraft version it was built against. All supported versions share a mod
// version, so three files called cityworld-5.1.0.jar would be indistinguishable in a mods folder or
// on a releases page. The mod's own version (in neoforge.mods.toml) stays a plain ${mod_version}.
version = "${mod_version}+mc${minecraft_version}"
group = mod_group_id

sourceSets.main.resources {
    // Include resources generated by data generators.
    srcDir('src/generated/resources')
    exclude("src/generated/**/.cache") // datagen cache files
}

repositories {
    // JourneyMap's API (compile-only; see the dependencies block). BlameJared is the maven TeamJM
    // asks addons to use — their own jm.gserv.me mirror goes down often.
    maven {
        name = 'BlameJared (JourneyMap API)'
        url = 'https://maven.blamejared.com'
    }
    // JourneyMap itself, for dev runs only. The mod JarJars the API and common-networking, so this
    // one artifact is the whole runtime dependency.
    maven {
        name = 'Modrinth'
        url = 'https://api.modrinth.com/maven'
        content { includeGroup 'maven.modrinth' }
    }
}

base {
    archivesName = mod_id
}

// Minecraft 1.20.1 ships Java 17 to end users, so Forge mods target Java 17.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

legacyForge {
    // SignBlockEntity's only public way to set text insists on notifying its level, which is a
    // deadlock during worldgen — see SupportBlocks.setSignText. We write the field instead.
    accessTransformers.from('src/main/resources/META-INF/accesstransformer.cfg')
    // Measured 2026-09-20: javap on the patched jar shows frontText/backText still private and
    // ConfirmScreen.callback still protected, so the AT above is NOT being applied on this line.
    // Validation makes MDG say whether it reads the file at all rather than failing silently.
    validateAccessTransformers = true

    version = project.forge_version

    // Parchment gives human-readable parameter names/javadocs. Optional.
    // Enabled only when both properties are set in gradle.properties (some MC
    // versions may not have Parchment mappings published yet).
    if (project.parchment_minecraft_version?.trim() && project.parchment_mappings_version?.trim()) {
        parchment {
            minecraftVersion = project.parchment_minecraft_version
            mappingsVersion = project.parchment_mappings_version
        }
    }

    // Access Transformers are auto-detected from META-INF/accesstransformer.cfg

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            // Join a server straight from the launcher:  ./gradlew runClient -PcwJoin=127.0.0.1
            // The split case (a real client against a real dedicated server) is the only way to
            // exercise the payload channel, waypoints crossing the wire, and overlays pushed to a
            // client in another JVM — none of which single-player can break. Note that passing
            // --args here does not work: ModDevGradle's run task treats it as the main class.
            if (project.hasProperty('cwJoin')) {
                programArguments.addAll '--quickPlayMultiplayer', project.property('cwJoin').toString()
            }
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // Headless worldgen verification: generates a CityWorld world, checks the generator is
        // installed, sweeps the planner, reads a built chunk back, and stops. It does NOT halt the
        // server — scripts/selftest.sh ends the run. Used by
        // scripts/selftest.sh to compare every supported Minecraft version. See CityWorldSelfTest.
        selfTest {
            server()
            programArgument '--nogui'
            systemProperty 'cityworld.selftest', 'true'
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all',
                    '--output', file('src/generated/resources/').getAbsolutePath(),
                    '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// 'localRuntime' declares runtime-only test dependencies that are NOT published.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    // JourneyMap integration is a SOFT dependency: compile-only, and nothing outside
    // me.daddychurchill.CityWorld.integration.journeymap may reference a journeymap.* type, so the
    // classes are never loaded when JourneyMap is absent. JourneyMap finds our plugin itself by
    // scanning for @JourneyMapPlugin. See PORTING.md.
    compileOnly "info.journeymap:journeymap-api-forge:${journeymap_api_version}"
}

// ---------------------------------------------------------------------------
// Build stamp. A version number answers "which release"; during development that is a different
// question from "which bytes" — and CityWorld deploys by copying jars into nine instances, where a
// filename cannot tell you whether the jar is the one you just built.
//
// So the jar records the commit it came from, and says so in the log at startup: the log line is the
// half that matters when somebody reports a bug, because it says what actually RAN rather than what
// is on disk now. Shared format across Sable's mods — see BuildInfo.
//
// Resolved at configure time and tolerant of git being absent (a source zip, a CI checkout without
// history): an unknown stamp must never fail a build.
static String gitOut(File dir, String... args) {
    try {
        var proc = new ProcessBuilder(args).directory(dir).redirectErrorStream(true).start()
        var out = proc.inputStream.text.trim()
        return proc.waitFor() == 0 && !out.isEmpty() ? out : null
    } catch (Exception ignored) {
        return null
    }
}
var buildCommit = gitOut(projectDir, "git", "rev-parse", "--short=8", "HEAD") ?: "unknown"
var buildBranch = gitOut(projectDir, "git", "rev-parse", "--abbrev-ref", "HEAD") ?: "unknown"
var buildDirty  = gitOut(projectDir, "git", "status", "--porcelain")
if (buildDirty) buildCommit += "-dirty"   // built from uncommitted changes; say so
// The COMMIT's timestamp, not the wall clock. A wall-clock stamp changes on every Gradle invocation,
// so the generated resource changes, so processResources and jar are never up to date — measured
// below as a ~20-second tax on every no-op build. %ct (epoch) rather than %cI, because %cI carries
// the committer machine's UTC offset and the same commit would then stamp differently on two
// machines, which is a hole in the reproducibility this exists for. On a -dirty build the commit's
// time loses nothing: -dirty has already said the bytes are not the commit's.
var commitEpoch = gitOut(projectDir, "git", "show", "-s", "--format=%ct", "HEAD")
var buildTime = commitEpoch
        ? new Date(commitEpoch.toLong() * 1000L).format("yyyy-MM-dd'T'HH:mm:ss'Z'", TimeZone.getTimeZone("UTC"))
        : "unknown"
logger.lifecycle("Build stamp: ${buildCommit} on ${buildBranch} at ${buildTime}")

// Expand mod metadata properties into the generated neoforge.mods.toml.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            mod_homepage           : mod_homepage,
            journeymap_version_range: journeymap_version_range,
            build_commit           : buildCommit,
            build_branch           : buildBranch,
            build_time             : buildTime,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
legacyForge.ideSyncTask generateModMetadata

// The same stamp on the jar's manifest, for reading a jar from a shell without loading it:
//   unzip -p build/libs/cityworld-*.jar META-INF/MANIFEST.MF | grep Build-
tasks.named('jar', Jar) {
    manifest {
        attributes([
                "Implementation-Title"  : mod_name,
                "Implementation-Version": mod_version,
                "Build-Commit"          : buildCommit,
                "Build-Branch"          : buildBranch,
                "Build-Time"            : buildTime,
        ])
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

// A port across several API generations produces more than javac's default hundred errors; show them all.
tasks.withType(JavaCompile).configureEach { options.compilerArgs += ['-Xmaxerrs', '5000'] }
